--- a/index.html
+++ b/index.html
@@ -109,22 +109,6 @@
             width: 100%;
             bottom: 0;
         }
-
-        /* Hide additional details by default */
-        .more-info {
-            display: none;
-            margin-top: 10px;
-            color: #666;
-        }
-
-        /* Button for showing more info */
-        .more-info-btn {
-            background-color: #008CBA;
-        }
-
-        .more-info-btn:hover {
-            background-color: #006f8e;
-        }
     </style>
 </head>
 <body>
@@ -143,14 +127,11 @@
                 <div class="college-details">
                     <p><strong>Established:</strong> 1946</p>
                     <p><strong>Location:</strong> Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
                     <p><strong>Specializations:</strong> Civil, Mechanical, Electrical, Computer Engineering</p>
+                    <p><strong>Facilities:</strong> Library, Workshop, Computer Labs, Hostel</p>
+                    <p><strong>Admission:</strong> Based on entrance exams and merit</p>
                     <a href="https://www.google.com/maps/search/Kerala+Government+Polytechnic+College+%28KGPTC%29%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
-                    <!-- More Info Button and Hidden Details -->
-                    <button class="btn more-info-btn" onclick="toggleInfo(1)">More Info</button>
-                    <div class="more-info" id="info-1">
-                        <p><strong>Accreditation:</strong> National Board of Accreditation (NBA)</p>
-                        <p><strong>Facilities:</strong> Library, Hostel, Workshops, Sports Complex</p>
-                    </div>
                 </div>
             </div>
 
@@ -161,14 +142,11 @@
                 </div>
                 <div class="college-details">
                     <p><strong>Location:</strong> Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
                     <p><strong>Specializations:</strong> Engineering Diploma Courses</p>
+                    <p><strong>Facilities:</strong> Computer Labs, Sports Complex, Hostel, Canteen</p>
+                    <p><strong>Admission:</strong> Based on state-level polytechnic entrance exam</p>
                     <a href="https://www.google.com/maps/search/Vidyodaya+Institute+of+Engineering+and+Technology%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
-                    <!-- More Info Button and Hidden Details -->
-                    <button class="btn more-info-btn" onclick="toggleInfo(2)">More Info</button>
-                    <div class="more-info" id="info-2">
-                        <p><strong>Accreditation:</strong> Kerala Technical Education Council (KTEC)</p>
-                        <p><strong>Facilities:</strong> Computer Labs, Auditorium, Hostel</p>
-                    </div>
                 </div>
             </div>
 
@@ -179,36 +157,124 @@
                 </div>
                 <div class="college-details">
                     <p><strong>Location:</strong> Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
                     <p><strong>Specializations:</strong> Civil, Mechanical, Electrical, Electronics</p>
+                    <p><strong>Facilities:</strong> Wi-Fi Enabled Campus, Library, Workshop, Laboratories</p>
+                    <p><strong>Admission:</strong> Based on entrance exam scores</p>
                     <a href="https://www.google.com/maps/search/KMCT+Polytechnic+College%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
-                    <!-- More Info Button and Hidden Details -->
-                    <button class="btn more-info-btn" onclick="toggleInfo(3)">More Info</button>
-                    <div class="more-info" id="info-3">
-                        <p><strong>Accreditation:</strong> AICTE</p>
-                        <p><strong>Facilities:</strong> Sports Facilities, Canteen, Workshops</p>
-                    </div>
                 </div>
             </div>
 
-            <!-- Additional colleges go here, following the same pattern as above -->
+            <!-- College 4 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>AWH Polytechnic College</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE, ISO Certified</p>
+                    <p><strong>Specializations:</strong> Mechanical, Civil, Electrical, Tool & Die</p>
+                    <p><strong>Facilities:</strong> Modern Labs, Sports Complex, Hostel</p>
+                    <p><strong>Admission:</strong> Merit-based selection</p>
+                    <a href="https://www.google.com/maps/search/AWH+Polytechnic+College%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 5 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>JDT Islam Polytechnic College</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Civil, Mechanical, Electrical Engineering</p>
+                    <p><strong>Facilities:</strong> Laboratories, Library, Hostel, Sports</p>
+                    <p><strong>Admission:</strong> Entrance exam and merit-based</p>
+                    <a href="https://www.google.com/maps/search/JDT+Islam+Polytechnic+College%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 6 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>Model Polytechnic College, Vadakara</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Vadakara, Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Civil, Mechanical, Electrical</p>
+                    <p><strong>Facilities:</strong> Modern Labs, Library, Sports Complex</p>
+                    <p><strong>Admission:</strong> Based on state-level entrance exam</p>
+                    <a href="https://www.google.com/maps/search/Model+Polytechnic+College%2C+Vadakara%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 7 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>M-DIT Polytechnic College</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Ulliyeri, Kozhikode</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Electrical, Civil, Electronics</p>
+                    <p><strong>Facilities:</strong> Labs, Canteen, Sports, Hostel</p>
+                    <p><strong>Admission:</strong> Merit and entrance exam</p>
+                    <a href="https://www.google.com/maps/search/M-DIT+Polytechnic+College%2C+Kozhikode%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 8 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>Model Polytechnic College, Poonjar</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Poonjar, Kottayam</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Various Engineering Courses</p>
+                    <p><strong>Facilities:</strong> Library, Laboratories, Hostel</p>
+                    <p><strong>Admission:</strong> Merit-based</p>
+                    <a href="https://www.google.com/maps/search/Model+Polytechnic+College%2C+Poonjar%2C+Kottayam%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 9 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>Model Polytechnic College, Karunagappally</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Karunagappally, Kollam</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Various Engineering Courses</p>
+                    <p><strong>Facilities:</strong> Hostel, Labs, Sports</p>
+                    <p><strong>Admission:</strong> Based on entrance exam</p>
+                    <a href="https://www.google.com/maps/search/Model+Polytechnic+College%2C+Karunagappally%2C+Kollam%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
+
+            <!-- College 10 -->
+            <div class="college-card">
+                <div class="college-header">
+                    <h2>Model Polytechnic College, Painavu</h2>
+                </div>
+                <div class="college-details">
+                    <p><strong>Location:</strong> Painavu, Idukki</p>
+                    <p><strong>Accreditation:</strong> AICTE</p>
+                    <p><strong>Specializations:</strong> Various Engineering Courses</p>
+                    <p><strong>Facilities:</strong> Laboratories, Library, Sports</p>
+                    <p><strong>Admission:</strong> Merit-based</p>
+                    <a href="https://www.google.com/maps/search/Model+Polytechnic+College%2C+Painavu%2C+Idukki%2C+India" class="btn" target="_blank">View on Map</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 Top Polytechnic Colleges in Kozhikode. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        // Function to toggle the visibility of additional information
-        function toggleInfo(collegeId) {
-            var info = document.getElementById("info-" + collegeId);
-            if (info.style.display === "none" || info.style.display === "") {
-                info.style.display = "block";
-            } else {
-                info.style.display = "none";
-            }
-        }
-    </script>
 
 </body>
 </html>
